--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "rsign2"
 version = "0.6.1"
-authors = ["Frank Denis <github@pureftpd.org>", "Daniel Rangel <daniel@rangel.in>"]
+authors = [
+    "Frank Denis <github@pureftpd.org>",
+    "Daniel Rangel <daniel@rangel.in>",
+]
 description = "A command-line tool to sign files and verify signatures."
 license = "MIT"
 readme = "README.md"
@@ -11,7 +14,7 @@ repository = "https://github.com/jedisct1/rsign2"
 
 [dependencies]
 base64 = "0.13"
-clap = "2.33"
+clap = { version = "3.0.0", features = ["std", "cargo", "wrap_help"] }
 minisign = "0.7"
 
 [target.'cfg(any(windows, unix))'.dependencies]
